fix gaps, hor scroll at 320, button type

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -2,7 +2,7 @@
   margin-top: 40px;
 }
 
-.card__list {
+.cards__list {
   display: grid;
   list-style: none;
   justify-content: center;
@@ -10,42 +10,4 @@
   grid-gap: 20px 17px;
   padding: 0;
   margin: 0;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.card__image {
-  width: 282px;
-  height: 282px;
-}
-
-.card__description {
-  display: flex;
-  background-color: #fff;
-  color: #000;
-  padding: 25px 20px;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.card__title {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  font-family: Inter, Arial, sans-serif;
-  font-weight: 900;
-  font-size: 24px;
-  line-height: 1.21;
-}
-
-.card__like-button {
-  background: transparent url(../images/like-inactive.svg) center no-repeat;
-  width: 21px;
-  height: 18px;
-  border: none;
 }
