--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -4,10 +4,22 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 1.2;
+  margin-top: 67px;
+  margin-bottom: 60px;
+}
+
+.footer__copyright {
+  margin: 0;
 }
 
 @media screen and (max-width: 500px) {
   .footer {
     font-size: 14px;
+    margin-top: 48px;
+    margin-bottom: 36px;
+  }
+
+  .footer__copyright {
+    margin: 0 0 0 20px;
   }
 }
