--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,9 +1,12 @@
 .header {
   margin-top: 45px;
+  padding-bottom: 41px;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 500px) {
   .header {
-    padding-left: 20px;
+    box-sizing: border-box;
+    padding: 0 0 30px 20px;
   }
 }
