--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -21,7 +21,7 @@
   grid-template-columns: minmax(auto, 373px) auto;
   align-items: center;
   max-width: 415px;
-  grid-gap: 15px;
+  grid-gap: 7px 18px;
   white-space: nowrap;
 }
 
@@ -32,6 +32,11 @@
   font-weight: 500;
   grid-area: title;
   margin: 0;
+  padding: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 373px;
 }
 
 .profile__edit-button {
@@ -39,7 +44,7 @@
   height: 24px;
   width: 24px;
   grid-area: button;
-  border-color: #fff;
+  border: 1px solid #fff;
   transition: linear 1s;
 }
 
@@ -65,7 +70,7 @@
   width: 150px;
   height: 50px;
   margin-left: auto;
-  border-color: #fff;
+  border: 2px solid #fff;
   border-radius: 2px;
   transition: linear 1s;
 }
@@ -105,6 +110,10 @@
     flex-direction: column;
   }
 
+  .profile__image {
+    margin: 0 0 30px;
+  }
+
   .profile__info {
     display: flex;
     flex-wrap: wrap;
@@ -114,6 +123,7 @@
 
   .profile__title {
     font-size: 22px;
+    max-width: 196px;
   }
 
   .profile__edit-button {
@@ -125,10 +135,11 @@
     font-size: 14px;
     width: 100%;
     text-align: center;
+    max-width: 196px;
   }
 
   .profile__add-button {
-    margin: 20px auto 0;
+    margin: 36px auto 0;
     width: 282px;
   }
 }
